# leptos-bevy-canvas

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: book.yml  cd.yml  tests.yml
docs/: Screen Recording 2024-12-03 at 22.05.35.webm  add_version_to_docs.py  check_version_in_docs.py
examples/: Cargo.toml
examples/loading_screen/: Cargo.toml  README.md  package.json
examples/loading_screen/assets/models/: Gateway Core.glb  Robot.glb
examples/loading_screen/src/: leptos_app.rs  main.rs
examples/loading_screen/src/bevy_app/: components.rs  mod.rs  resources.rs  setup.rs  states.rs  systems.rs
examples/src/: lib.rs
examples/synced_bevy_query/: Cargo.toml  README.md  index.html
examples/synced_bevy_query/assets/environment_maps/: pisa_diffuse_rgb9e5_zstd.ktx2
examples/synced_bevy_query/src/: events.rs  leptos_app.rs  main.rs
examples/synced_bevy_query/src/bevy_app/: components.rs  mod.rs  setup.rs  systems.rs
examples/unidir_events/: Cargo.toml  README.md  index.html  tailwind.config.js
examples/unidir_events/assets/environment_maps/: pisa_specular_rgb9e5_zstd.ktx2
examples/unidir_events/src/: bevy_app.rs  events.rs  leptos_app.rs  main.rs
examples/unidir_events/src/bevy_app/: components.rs  mod.rs  setup.rs  systems.rs
examples/unidir_messages/: Cargo.toml  README.md
examples/unidir_messages/src/: leptos_app.rs  main.rs  messages.rs
examples/unidir_messages/src/bevy_app/: mod.rs  resources.rs  setup.rs  systems.rs
src/: app_extension.rs  leptos_component.rs  lib.rs  plugin.rs  queries.rs  resources.rs  signal_synced.rs  systems.rs  traits.rs  utils.rs
src/events/: mod.rs
src/events/bevy/: macros.rs  mod.rs
src/events/leptos/: macros.rs  mod.rs  traits.rs
src/messages/: mod.rs
src/messages/bevy/: mod.rs
src/messages/leptos/: macros.rs  mod.rs  traits.rs
