[package]
name = "leptos-bevy-canvas"
version = "0.1.0-alpha"
edition = "2021"
authors = ["Marc-Stefan Cassola"]
categories = ["gui", "web-programming", "rendering", "graphics", "wasm"]
description = "Easily embed an idiomatic Bevy app inside your Leptos app."
exclude = ["examples/", "tests/"]
keywords = ["leptos", "bevy", "graphics", "wasm", "canvas"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Synphonyte/leptos-bevy-canvas"

[dependencies]
bevy = { version = "0.14", default-features = false }
crossbeam-channel = "0.5"
leptos = "0.7.0-beta"
leptos-use = "0.14.0-beta"