[package]
name = "leptos-bevy-canvas"
version = "0.2.0"
edition = "2021"
authors = ["Marc-Stefan Cassola"]
categories = ["gui", "web-programming", "rendering", "graphics", "wasm"]
description = "Embed an idiomatic Bevy app inside your Leptos app with ease."
exclude = ["examples/", "tests/"]
keywords = ["leptos", "bevy", "graphics", "wasm", "canvas"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Synphonyte/leptos-bevy-canvas"

[dependencies]
bevy = { version = "0.16", default-features = false }
crossbeam-channel = "0.5"
leptos = "0.8.2"
leptos-use = { version = "0.15.7", default-features = false, features = [
    "use_raf_fn",
] }
paste = "1.0.15"
variadics_please = "1.1.0"

[dev-dependencies]
bevy = { version = "0.16", default-features = false, features = [
    "bevy_window",
] }
