[workspace]
resolver = "2"

members = ["unidir_events", "synced_bevy_query", "loading_screen"]

[workspace.dependencies]
bevy = { version = "0.16", default-features = false }
bevy-inspector-egui = "0.31"
console_error_panic_hook = "0.1"
getrandom = { version = "0.3.2", features = ["wasm_js"] }
leptos = { version = "0.8.2", features = ["csr"] }
leptos-bevy-canvas = { path = "../../leptos-bevy-canvas", features = ["bevy_state"]}
leptos-use = "0.16"
rand_core = "0.6"
uuid = { version = "1.16.0", features = ["rng-getrandom"] }

[package]
name = "leptos-bevy-canvas-examples"
version = "0.3.3"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
