[package]
name = "synced_bevy_query"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy-inspector-egui = "0.29"
bevy_rand.workspace = true
console_error_panic_hook.workspace = true
leptos.workspace = true
leptos-bevy-canvas.workspace = true
leptos-bevy-canvas-examples.workspace = true
leptos-use.workspace = true
rand_core.workspace = true

[dependencies.bevy]
workspace = true
features = [
    "bevy_mesh_picking_backend",
    "bevy_pbr",
    "bevy_picking",
    "bevy_window",
    "bevy_winit",
    "tonemapping_luts",
    "webgl2"
]