[package]
name = "unidir_events"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true, features = ["webgl2", "bevy_pbr", "bevy_picking"] }
console_error_panic_hook.workspace = true
leptos.workspace = true
leptos-bevy-canvas.workspace = true
leptos-bevy-canvas-examples.workspace = true
meshtext = "0.3.1"