[package]
name = "unidir_events"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy-inspector-egui.workspace = true
console_error_panic_hook.workspace = true
leptos.workspace = true
leptos-bevy-canvas.workspace = true
leptos-use.workspace = true
meshtext = "0.3.1"
getrandom.workspace = true

[dependencies.bevy]
workspace = true
features = [
    "bevy_mesh_picking_backend",
    "bevy_pbr",
    "bevy_picking",
    "bevy_window",
    "bevy_winit",
    "tonemapping_luts",
    "webgl2",
]
